--- a/src/phone_orientation/setup.cfg
+++ b/src/phone_orientation/setup.cfg
@@ -2,3 +2,5 @@
 script_dir=$base/lib/phone_orientation
 [install]
 install_scripts=$base/lib/phone_orientation
+[build_scripts]
+executable= /usr/bin/env python3
