--- a/src/phone_orientation/package.xml
+++ b/src/phone_orientation/package.xml
@@ -7,6 +7,8 @@
   <maintainer email="atahalabsi@gmail.com">aymanhadair</maintainer>
   <license>TODO: License declaration</license>
 
+  <depend>geometry_msgs</depend>
+  
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
