--- a/src/vis_phone/CMakeLists.txt
+++ b/src/vis_phone/CMakeLists.txt
@@ -9,6 +9,11 @@ endif()
 find_package(ament_cmake REQUIRED)
 find_package(rviz2 REQUIRED)
 
+install(
+  DIRECTORY urdf rviz
+  DESTINATION share/${PROJECT_NAME}/
+)
+
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
   # the following line skips the linter which checks for copyrights
