--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "catkin-pkg>=1.0.0",
     "numpy>=2.3.2",
     "phonesensors>=1.0.0",
     "pyyaml>=6.0.2",
