add yaml  file in new cofig folder for IP and port of the phone server

--- a/src/vis_phone/CMakeLists.txt
+++ b/src/vis_phone/CMakeLists.txt
@@ -10,7 +10,7 @@ find_package(ament_cmake REQUIRED)
 find_package(rviz2 REQUIRED)
 
 install(
-  DIRECTORY urdf rviz launch
+  DIRECTORY urdf rviz launch config
   DESTINATION share/${PROJECT_NAME}/
 )
 
